#81: Upgrading to JakartaEE 10